[package]
name = "dancinglink"
version = "0.1.0"
edition = "2021"

[[bench]]
name="dancinglink_bench"
harness=false

[[bench]]
name="dancinglink_bench_multi"
harness=false

[build-dependencies]
cxx-build = "1.0.129"

[dependencies]
criterion = "0.5.1"
cxx = "1.0.129"
proptest = "1.5.0"
rand = "0.8.5"
serde= { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
